manifests/athena-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: athena-prod
  labels:
    name: athena-prod
    app.kubernetes.io/part-of: project-athena
